<resources>
    <string name="app_name">FrutaFacilApp</string>
    <string name="title">FrutaFacil</string>
    <string name="description">Comparador de precios de frutas en fruterias locales</string>
    <string name="menu">menu</string>
    <string name="app">app</string>
    <string name="about_us">about us</string>
    <string name="about_us_description1">
        Hola, somos Yanis, Sergi y Oriol, y juntos formamos la empresa "Operación YSO".</string>
    <string name="about_us_description2">
        Actualmente, estamos inmersos en nuestra formación superior en Desarrollo de Aplicaciones Multiplataforma.</string>
    <string name="about_us_description3">
        ¡Únete a nosotros mientras perseguimos nuestras ambiciones en el fascinante mundo de la tecnología y la innovación!</string>
    <string name="app_description">Fruta Fácil es una startup que busca simplificar la vida de los consumidores al proporcionarles una herramienta fácil de usar para comparar los precios de frutas y verduras en sus tiendas locales de comestibles. El nombre "Fruta Fácil" encapsula perfectamente la facilidad y conveniencia que ofrecemos.</string>
    <string name="logoproyecto">logoProyecto</string>
    <string name="logoempresa">logoEmpresa</string>
</resources>